--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,13 @@
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: sans-serif;
 	font-size: 16px;
-	color: #222;
-	background-color: #FaFaFa;
+	color: white;
+	background-color: #335B67;
+  background: -ms-radial-gradient(ellipse at center,  #335B67 0%, #2C3E50 100%) fixed no-repeat;
+	background: -moz-radial-gradient(ellipse at center,  #335B67 0%, #2C3E50 100%) fixed no-repeat;
+	background: -o-radial-gradient(ellipse at center, #335B67 0%, #2C3E50 100%) fixed no-repeat;
+	background: -webkit-gradient(radial, center center, 0, center center, 497, color-stop(0, #335B67), color-stop(1, #2C3E50));
+	background: -webkit-radial-gradient(ellipse at center,  #335B67 0%, #2C3E50 100%) fixed no-repeat;
 	text-align: center;
 	line-height: 1.4em;
 }
@@ -29,4 +34,15 @@ code {
 
 a {
 	color: #2574A9;
+}
+
+.link_author{
+text-decoration: none;
+color: #fff;
+
+}
+
+.link_author:hover{
+  
+  color: #222;
 }
